✨ feat: 猜星座(未完成)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,9 @@
             ],
             "program": "${workspaceFolder}\\index.js",
             "args": [
-                "-e"
+                "-a"
             ],
-            "console": "internalConsole"
+            "console": "integratedTerminal"
         }
     ]
 }
