--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "commander": "^11.0.0",
     "eslint": "^7.32.0",
     "node-xlsx": "^0.24.0",
-    "redis": "^4.6.9"
+    "redis": "^4.6.9",
+    "terminal-kit": "^3.1.1"
   }
 }
