✨ feat: 測試取得 vue 檔案的 li 與 p 內的字串內容

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,7 @@ dist
 /Desktop.ini
 /534F529527C6506B44FFFCDFBB27C2B2F9056C44554D.ico
 /GameList.csv
+/output.xlsx
+/output1.xlsx
+/AboutDirectionsView.vue
+/AboutDirectionsView1.vue
