--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "dependencies": {
     "@babel/core": "^7.24.7",
     "@babel/eslint-parser": "^7.24.7",
+    "cheerio": "^1.0.0-rc.12",
     "cli-color": "^2.0.4",
     "commander": "^11.0.0",
     "eslint": "^7.32.0",
+    "jsdom": "^24.1.0",
     "node-xlsx": "^0.24.0",
     "redis": "^4.6.9",
     "terminal-kit": "^3.1.1"
