✨ feat: 新增 W1 塞選條件

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\index.js",
-      "args": ["-o C:/royal/gitlab/H1/h1walletapi_PRD"],
+      "args": ["-f C:/royal/gitlab/W1/thirdpartywalletapi"],
       "console": "integratedTerminal"
     }
   ]
