--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\index.js",
-      "args": ["-f C:/royal/gitlab/W1/thirdpartywalletapi"],
+      "args": ["-f D:/company/H1/h1walletapi"],
       "console": "integratedTerminal"
     }
   ]
