✨ feat: 判斷欄位資料是否有重複的資料

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\index.js",
-      "args": ["-s +"],
+      "args": ["-c +"],
       "console": "integratedTerminal"
     }
   ]
